# TI32_box

./: .gitignore  .gitmodules  CMakeLists.txt  esp32-s3-box-basic-idf.code-workspace  partitions.csv  sdkconfig.defaults  transfer.md
components/AsyncTCP/: CMakeLists.txt
components/LovyanGFX/boards.cmake/: esp-idf.cmake
components/LovyanGFX/src/lgfx/v1_autodetect/: LGFX_AutoDetect_ESP32_all.hpp
components/NimBLE-Arduino/: CMakeLists.txt
components/arduino/: CMakeLists.txt
components/display_lgfx_box/: CMakeLists.txt
components/display_lgfx_box/include/: display_box.h
components/display_lgfx_box/src/: display_box.cpp
main/: CMakeLists.txt  audio.cpp  audio.h  ble_gamepad.h  ble_keyboard.h  idf_component.yml  main.cpp  web_files.cpp  web_files.h
test_suite/: INDEX.txt  TEST_PROGRAMS.txt  test01.bas  test02.bas  test03.bas  test04.bas  test05.bas  test06.bas  test07.bas  test08.bas  test09.bas  test10.bas  test11.bas  test12.bas  test13.bas  test14.bas  test15.bas  test16.bas  test17.bas  test18.bas  test19.bas  test20.bas  test21.bas  test22.bas  test23.bas  test24.bas  test25.bas  test26a.bas  test26b.bas  test27.bas  test28.bas  test29.bas  test30.bas  test31.bas  test32.bas  test33.bas  test34.bas  test35.bas  test36.bas  test37.bas  (+9 more)
